@@ -3,7 +3,6 @@ package org.jabref.gui.shared;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
 import java.sql.SQLException;
 import java.util.List;
@@ -20,11 +19,11 @@ import javafx.scene.control.Alert.AlertType;
 import javafx.scene.control.ButtonBar.ButtonData;
 import javafx.scene.control.ButtonType;
 
-import org.jabref.Globals;
 import org.jabref.gui.AbstractViewModel;
-import org.jabref.gui.BasePanel;
 import org.jabref.gui.DialogService;
+import org.jabref.gui.Globals;
 import org.jabref.gui.JabRefFrame;
+import org.jabref.gui.LibraryTab;
 import org.jabref.gui.exporter.SaveDatabaseAction;
 import org.jabref.gui.help.HelpAction;
 import org.jabref.gui.util.FileDialogConfiguration;
@@ -33,22 +32,21 @@ import org.jabref.logic.help.HelpFile;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.shared.DBMSConnectionProperties;
 import org.jabref.logic.shared.DBMSConnectionPropertiesBuilder;
+import org.jabref.logic.shared.DBMSType;
+import org.jabref.logic.shared.DatabaseLocation;
+import org.jabref.logic.shared.DatabaseNotSupportedException;
 import org.jabref.logic.shared.exception.InvalidDBMSConnectionPropertiesException;
 import org.jabref.logic.shared.prefs.SharedDatabasePreferences;
 import org.jabref.logic.shared.security.Password;
 import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.database.BibDatabaseContext;
-import org.jabref.model.database.shared.DBMSType;
-import org.jabref.model.database.shared.DatabaseLocation;
-import org.jabref.model.database.shared.DatabaseNotSupportedException;
-import org.jabref.preferences.JabRefPreferences;
 
+import com.tobiasdiez.easybind.EasyBind;
 import de.saxsys.mvvmfx.utils.validation.CompositeValidator;
 import de.saxsys.mvvmfx.utils.validation.FunctionBasedValidator;
 import de.saxsys.mvvmfx.utils.validation.ValidationMessage;
 import de.saxsys.mvvmfx.utils.validation.ValidationStatus;
 import de.saxsys.mvvmfx.utils.validation.Validator;
-import org.fxmisc.easybind.EasyBind;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -88,12 +86,10 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
         this.frame = frame;
         this.dialogService = dialogService;
 
-        EasyBind.subscribe(selectedDBMSType, selected -> {
-            port.setValue(Integer.toString(selected.getDefaultPort()));
-        });
+        EasyBind.subscribe(selectedDBMSType, selected -> port.setValue(Integer.toString(selected.getDefaultPort())));
 
         Predicate<String> notEmpty = input -> (input != null) && !input.trim().isEmpty();
-        Predicate<String> fileExists = input -> Files.exists(Paths.get(input));
+        Predicate<String> fileExists = input -> Files.exists(Path.of(input));
         Predicate<String> notEmptyAndfilesExist = notEmpty.and(fileExists);
 
         databaseValidator = new FunctionBasedValidator<>(database, notEmpty, ValidationMessage.error(Localization.lang("Required field \"%0\" is empty.", Localization.lang("Library"))));
@@ -125,8 +121,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
                 .createDBMSConnectionProperties();
 
         setupKeyStore();
-        boolean connected = openSharedDatabase(connectionProperties);
-        return connected;
+        return openSharedDatabase(connectionProperties);
     }
 
     private void setupKeyStore() {
@@ -144,7 +139,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
         }
 
         if (autosave.get()) {
-            Path localFilePath = Paths.get(folder.getValue());
+            Path localFilePath = Path.of(folder.getValue());
 
             if (Files.exists(localFilePath) && !Files.isDirectory(localFilePath)) {
 
@@ -162,12 +157,12 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
 
         try {
             SharedDatabaseUIManager manager = new SharedDatabaseUIManager(frame);
-            BasePanel panel = manager.openNewSharedDatabaseTab(connectionProperties);
+            LibraryTab libraryTab = manager.openNewSharedDatabaseTab(connectionProperties);
             setPreferences();
 
             if (!folder.getValue().isEmpty()) {
                 try {
-                    new SaveDatabaseAction(panel, Globals.prefs, Globals.entryTypesManager).saveAs(Paths.get(folder.getValue()));
+                    new SaveDatabaseAction(libraryTab, Globals.prefs, Globals.entryTypesManager).saveAs(Path.of(folder.getValue()));
                 } catch (Throwable e) {
                     LOGGER.error("Error while saving the database", e);
                 }
@@ -208,7 +203,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
 
         if (rememberPassword.get()) {
             try {
-                prefs.setPassword(new Password(password.getValue(), password.getValue()).encrypt());
+                prefs.setPassword(new Password(password.getValue(), user.getValue()).encrypt());
             } catch (GeneralSecurityException | UnsupportedEncodingException e) {
                 LOGGER.error("Could not store the password due to encryption problems.", e);
             }
@@ -256,7 +251,7 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
     }
 
     private boolean isSharedDatabaseAlreadyPresent(DBMSConnectionProperties connectionProperties) {
-        List<BasePanel> panels = frame.getBasePanelList();
+        List<LibraryTab> panels = frame.getLibraryTabs();
         return panels.parallelStream().anyMatch(panel -> {
             BibDatabaseContext context = panel.getBibDatabaseContext();
 
@@ -269,12 +264,10 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
         FileDialogConfiguration fileDialogConfiguration = new FileDialogConfiguration.Builder()
                 .addExtensionFilter(StandardFileType.BIBTEX_DB)
                 .withDefaultExtension(StandardFileType.BIBTEX_DB)
-                .withInitialDirectory(Globals.prefs.get(JabRefPreferences.WORKING_DIRECTORY))
+                .withInitialDirectory(Globals.prefs.getWorkingDir())
                 .build();
         Optional<Path> exportPath = dialogService.showFileSaveDialog(fileDialogConfiguration);
-        exportPath.ifPresent(path -> {
-            folder.setValue(path.toString());
-        });
+        exportPath.ifPresent(path -> folder.setValue(path.toString()));
     }
 
     public void showOpenKeystoreFileDialog() {
@@ -282,12 +275,10 @@ public class SharedDatabaseLoginDialogViewModel extends AbstractViewModel {
                 .addExtensionFilter(FileFilterConverter.ANY_FILE)
                 .addExtensionFilter(StandardFileType.JAVA_KEYSTORE)
                 .withDefaultExtension(StandardFileType.JAVA_KEYSTORE)
-                .withInitialDirectory(Globals.prefs.get(JabRefPreferences.WORKING_DIRECTORY))
+                .withInitialDirectory(Globals.prefs.getWorkingDir())
                 .build();
         Optional<Path> keystorePath = dialogService.showFileOpenDialog(fileDialogConfiguration);
-        keystorePath.ifPresent(path -> {
-            keystore.setValue(path.toString());
-        });
+        keystorePath.ifPresent(path -> keystore.setValue(path.toString()));
     }
 
     public StringProperty databaseproperty() {
