@@ -2,7 +2,6 @@ package org.jabref.gui.util;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 public class DirectoryDialogConfiguration {
@@ -28,12 +27,12 @@ public class DirectoryDialogConfiguration {
         public Builder withInitialDirectory(Path directory) {
 
             directory = directory.toAbsolutePath();
-            //Dir must be a folder, not a file
+            // Dir must be a folder, not a file
             if (!Files.isDirectory(directory)) {
                 directory = directory.getParent();
             }
-            //The lines above work also if the dir does not exist at all!
-            //NULL is accepted by the filechooser as no inital path
+            // The lines above work also if the dir does not exist at all!
+            // NULL is accepted by the filechooser as no inital path
 
             if (!Files.exists(directory)) {
 
@@ -44,7 +43,7 @@ public class DirectoryDialogConfiguration {
         }
 
         public Builder withInitialDirectory(String directory) {
-            withInitialDirectory(Paths.get(directory));
+            withInitialDirectory(Path.of(directory));
             return this;
         }
     }
