@@ -1,7 +1,7 @@
 package org.jabref.logic.cleanup;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -9,12 +9,11 @@ import java.util.Optional;
 
 import org.jabref.logic.externalfiles.LinkedFileHandler;
 import org.jabref.model.FieldChange;
-import org.jabref.model.cleanup.CleanupJob;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.model.metadata.FilePreferences;
 import org.jabref.model.util.OptionalUtil;
+import org.jabref.preferences.FilePreferences;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -38,7 +37,7 @@ public class RenamePdfCleanup implements CleanupJob {
 
         boolean changed = false;
         for (LinkedFile file : files) {
-            if (onlyRelativePaths && Paths.get(file.getLink()).isAbsolute()) {
+            if (onlyRelativePaths && Path.of(file.getLink()).isAbsolute()) {
                 continue;
             }
 
