@@ -4,9 +4,9 @@ import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -50,66 +50,61 @@ public class MetaDataParser {
         List<String> defaultCiteKeyPattern = new ArrayList<>();
         Map<EntryType, List<String>> nonDefaultCiteKeyPatterns = new HashMap<>();
 
-        for (Map.Entry<String, String> entry : data.entrySet()) {
+        // process groups (GROUPSTREE and GROUPSTREE_LEGACY) at the very end (otherwise it can happen that not all dependent data are set)
+        List<Map.Entry<String, String>> entryList = new ArrayList<>(data.entrySet());
+        entryList.sort(groupsLast());
+
+        for (Map.Entry<String, String> entry : entryList) {
             List<String> value = getAsList(entry.getValue());
 
             if (entry.getKey().startsWith(MetaData.PREFIX_KEYPATTERN)) {
                 EntryType entryType = EntryTypeFactory.parse(entry.getKey().substring(MetaData.PREFIX_KEYPATTERN.length()));
                 nonDefaultCiteKeyPatterns.put(entryType, Collections.singletonList(getSingleItem(value)));
-                continue;
             } else if (entry.getKey().startsWith(MetaData.FILE_DIRECTORY + '-')) {
                 // The user name comes directly after "FILE_DIRECTORY-"
                 String user = entry.getKey().substring(MetaData.FILE_DIRECTORY.length() + 1);
                 metaData.setUserFileDirectory(user, getSingleItem(value));
-                continue;
             } else if (entry.getKey().startsWith(MetaData.SELECTOR_META_PREFIX)) {
                 metaData.addContentSelector(ContentSelectors.parse(FieldFactory.parseField(entry.getKey().substring(MetaData.SELECTOR_META_PREFIX.length())), StringUtil.unquote(entry.getValue(), MetaData.ESCAPE_CHARACTER)));
-                continue;
             } else if (entry.getKey().startsWith(MetaData.FILE_DIRECTORY + "Latex-")) {
                 // The user name comes directly after "FILE_DIRECTORYLatex-"
                 String user = entry.getKey().substring(MetaData.FILE_DIRECTORY.length() + 6);
-                Path path = Paths.get(getSingleItem(value)).normalize();
+                Path path = Path.of(getSingleItem(value)).normalize();
                 metaData.setLatexFileDirectory(user, path);
-                continue;
-            }
-
-            switch (entry.getKey()) {
-                case MetaData.GROUPSTREE:
-                case MetaData.GROUPSTREE_LEGACY:
-                    metaData.setGroups(GroupsParser.importGroups(value, keywordSeparator, fileMonitor, metaData));
-                    break;
-                case MetaData.SAVE_ACTIONS:
-                    metaData.setSaveActions(Cleanups.parse(value));
-                    break;
-                case MetaData.DATABASE_TYPE:
-                    metaData.setMode(BibDatabaseMode.parse(getSingleItem(value)));
-                    break;
-                case MetaData.KEYPATTERNDEFAULT:
-                    defaultCiteKeyPattern = Collections.singletonList(getSingleItem(value));
-                    break;
-                case MetaData.PROTECTED_FLAG_META:
-                    if (Boolean.parseBoolean(getSingleItem(value))) {
-                        metaData.markAsProtected();
-                    } else {
-                        metaData.markAsNotProtected();
-                    }
-                    break;
-                case MetaData.FILE_DIRECTORY:
-                    metaData.setDefaultFileDirectory(getSingleItem(value));
-                    break;
-                case MetaData.SAVE_ORDER_CONFIG:
-                    metaData.setSaveOrderConfig(SaveOrderConfig.parse(value));
-                    break;
-                default:
-                    // Keep meta data items that we do not know in the file
-                    metaData.putUnknownMetaDataItem(entry.getKey(), value);
+            } else if (entry.getKey().equals(MetaData.SAVE_ACTIONS)) {
+                metaData.setSaveActions(Cleanups.parse(value));
+            } else if (entry.getKey().equals(MetaData.DATABASE_TYPE)) {
+                metaData.setMode(BibDatabaseMode.parse(getSingleItem(value)));
+            } else if (entry.getKey().equals(MetaData.KEYPATTERNDEFAULT)) {
+                defaultCiteKeyPattern = Collections.singletonList(getSingleItem(value));
+            } else if (entry.getKey().equals(MetaData.PROTECTED_FLAG_META)) {
+                if (Boolean.parseBoolean(getSingleItem(value))) {
+                    metaData.markAsProtected();
+                } else {
+                    metaData.markAsNotProtected();
+                }
+            } else if (entry.getKey().equals(MetaData.FILE_DIRECTORY)) {
+                metaData.setDefaultFileDirectory(getSingleItem(value));
+            } else if (entry.getKey().equals(MetaData.SAVE_ORDER_CONFIG)) {
+                metaData.setSaveOrderConfig(SaveOrderConfig.parse(value));
+            } else if (entry.getKey().equals(MetaData.GROUPSTREE) || entry.getKey().equals(MetaData.GROUPSTREE_LEGACY)) {
+                metaData.setGroups(GroupsParser.importGroups(value, keywordSeparator, fileMonitor, metaData));
+            } else {
+                // Keep meta data items that we do not know in the file
+                metaData.putUnknownMetaDataItem(entry.getKey(), value);
             }
         }
+
         if (!defaultCiteKeyPattern.isEmpty() || !nonDefaultCiteKeyPatterns.isEmpty()) {
             metaData.setCiteKeyPattern(defaultCiteKeyPattern, nonDefaultCiteKeyPatterns);
         }
 
         return metaData;
+    }
+
+    private static Comparator<? super Map.Entry<String, String>> groupsLast() {
+        return (s1, s2) -> MetaData.GROUPSTREE.equals(s1.getKey()) || MetaData.GROUPSTREE_LEGACY.equals(s1.getKey()) ? 1 :
+                MetaData.GROUPSTREE.equals(s2.getKey()) || MetaData.GROUPSTREE_LEGACY.equals(s2.getKey()) ? -1 : 0;
     }
 
     /**
