@@ -8,7 +8,6 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -18,8 +17,8 @@ import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
 
 import org.jabref.model.database.BibDatabaseContext;
-import org.jabref.model.metadata.FilePreferences;
 import org.jabref.model.util.FileHelper;
+import org.jabref.preferences.FilePreferences;
 
 /**
  * Represents the link to an external file (e.g. associated PDF file).
@@ -27,28 +26,31 @@ import org.jabref.model.util.FileHelper;
  */
 public class LinkedFile implements Serializable {
 
-    private static final LinkedFile NULL_OBJECT = new LinkedFile("", "", "");
-    //We have to mark these properties as transient because they can't be serialized directly
+    private static final LinkedFile NULL_OBJECT = new LinkedFile("", Path.of(""), "");
+    // We have to mark these properties as transient because they can't be serialized directly
     private transient StringProperty description = new SimpleStringProperty();
     private transient StringProperty link = new SimpleStringProperty();
     private transient StringProperty fileType = new SimpleStringProperty();
 
     public LinkedFile(String description, Path link, String fileType) {
-        this(description, link.toString(), fileType);
+        this(Objects.requireNonNull(description), Objects.requireNonNull(link).toString(), Objects.requireNonNull(fileType));
     }
 
     /**
-     * @deprecated use the other constructor {@link #LinkedFile(String, Path, String)}
+     * Constructor for non-valid paths. We need to parse them, because the GUI needs to render it.
      */
-    @Deprecated
     public LinkedFile(String description, String link, String fileType) {
         this.description.setValue(Objects.requireNonNull(description));
+        setLink(link);
         this.fileType.setValue(Objects.requireNonNull(fileType));
-        setLink(Objects.requireNonNull(link));
     }
 
     public LinkedFile(URL link, String fileType) {
-        this("", Objects.requireNonNull(link).toString(), fileType);
+        this("", Objects.requireNonNull(link).toString(), Objects.requireNonNull(fileType));
+    }
+
+    public LinkedFile(String description, URL link, String fileType) {
+        this(description, Objects.requireNonNull(link).toString(), Objects.requireNonNull(fileType));
     }
 
     public StringProperty descriptionProperty() {
@@ -111,6 +113,7 @@ public class LinkedFile implements Serializable {
 
     /**
      * Writes serialized object to ObjectOutputStream, automatically called
+     *
      * @param out {@link ObjectOutputStream}
      * @throws IOException
      */
@@ -123,6 +126,7 @@ public class LinkedFile implements Serializable {
 
     /**
      * Reads serialized object from ObjectInputStreamm, automatically called
+     *
      * @param in {@link ObjectInputStream}
      * @throws IOException
      */
@@ -134,10 +138,11 @@ public class LinkedFile implements Serializable {
 
     /**
      * Checks if the given String is an online link
+     *
      * @param toCheck The String to check
      * @return <code>true</code>, if it starts with "http://", "https://" or contains "www."; <code>false</code> otherwise
      */
-    private boolean isOnlineLink(String toCheck) {
+    public static boolean isOnlineLink(String toCheck) {
         String normalizedFilePath = toCheck.trim().toLowerCase();
         return normalizedFilePath.startsWith("http://") || normalizedFilePath.startsWith("https://") || normalizedFilePath.contains("www.");
     }
@@ -165,7 +170,7 @@ public class LinkedFile implements Serializable {
     }
 
     public Optional<Path> findIn(BibDatabaseContext databaseContext, FilePreferences filePreferences) {
-        List<Path> dirs = databaseContext.getFileDirectoriesAsPaths(filePreferences);
+        List<Path> dirs = databaseContext.getFileDirectories(filePreferences);
         return findIn(dirs);
     }
 
@@ -180,7 +185,7 @@ public class LinkedFile implements Serializable {
                 return Optional.empty();
             }
 
-            Path file = Paths.get(link.get());
+            Path file = Path.of(link.get());
             if (file.isAbsolute() || directories.isEmpty()) {
                 if (Files.exists(file)) {
                     return Optional.of(file);
@@ -188,7 +193,7 @@ public class LinkedFile implements Serializable {
                     return Optional.empty();
                 }
             } else {
-                return FileHelper.expandFilenameAsPath(link.get(), directories);
+                return FileHelper.find(link.get(), directories);
             }
         } catch (InvalidPathException ex) {
             return Optional.empty();
