@@ -3,12 +3,13 @@ package org.jabref.logic.importer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.stream.Stream;
 
+import org.jabref.logic.preferences.TimestampPreferences;
 import org.jabref.logic.xmp.XmpPreferences;
+import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -23,34 +24,36 @@ import static org.mockito.Mockito.when;
 class ImportFormatReaderIntegrationTest {
 
     private ImportFormatReader reader;
+    private TimestampPreferences timestampPreferences = mock(TimestampPreferences.class);
 
     @BeforeEach
     void setUp() {
         reader = new ImportFormatReader();
         ImportFormatPreferences importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
         when(importFormatPreferences.getEncoding()).thenReturn(StandardCharsets.UTF_8);
+        when(timestampPreferences.getTimestampField()).then(invocation -> StandardField.TIMESTAMP);
         reader.resetImportFormats(importFormatPreferences, mock(XmpPreferences.class), new DummyFileUpdateMonitor());
     }
 
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportUnknownFormat(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
-        ImportFormatReader.UnknownFormatImport unknownFormat = reader.importUnknownFormat(file, new DummyFileUpdateMonitor());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        ImportFormatReader.UnknownFormatImport unknownFormat = reader.importUnknownFormat(file, timestampPreferences, new DummyFileUpdateMonitor());
         assertEquals(count, unknownFormat.parserResult.getDatabase().getEntryCount());
     }
 
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportFormatFromFile(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
         assertEquals(count, reader.importFromFile(format, file).getDatabase().getEntries().size());
     }
 
     @ParameterizedTest
     @MethodSource("importFormats")
     void testImportUnknownFormatFromString(String resource, String format, int count) throws Exception {
-        Path file = Paths.get(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
+        Path file = Path.of(ImportFormatReaderIntegrationTest.class.getResource(resource).toURI());
         String data = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
         assertEquals(count, reader.importUnknownFormat(data).parserResult.getDatabase().getEntries().size());
     }
