@@ -2,8 +2,8 @@ package org.jabref.logic.importer;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+import org.jabref.logic.preferences.TimestampPreferences;
 import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 import org.jabref.model.util.FileUpdateMonitor;
@@ -20,6 +20,7 @@ class ImportFormatReaderTestParameterless {
 
     private ImportFormatReader reader;
     private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
+    private final TimestampPreferences timestampPreferences = mock(TimestampPreferences.class);
 
     @BeforeEach
     void setUp() {
@@ -31,13 +32,13 @@ class ImportFormatReaderTestParameterless {
 
     @Test
     void importUnknownFormatThrowsExceptionIfNoMatchingImporterWasFound() throws Exception {
-        Path file = Paths.get(ImportFormatReaderTestParameterless.class.getResource("fileformat/emptyFile.xml").toURI());
-        assertThrows(ImportException.class, () -> reader.importUnknownFormat(file, fileMonitor));
+        Path file = Path.of(ImportFormatReaderTestParameterless.class.getResource("fileformat/emptyFile.xml").toURI());
+        assertThrows(ImportException.class, () -> reader.importUnknownFormat(file, timestampPreferences, fileMonitor));
     }
 
     @Test
     void importUnknownFormatThrowsExceptionIfPathIsNull() throws Exception {
-        assertThrows(NullPointerException.class, () -> reader.importUnknownFormat(null, fileMonitor));
+        assertThrows(NullPointerException.class, () -> reader.importUnknownFormat(null, timestampPreferences, fileMonitor));
     }
 
     @Test
@@ -47,6 +48,6 @@ class ImportFormatReaderTestParameterless {
 
     @Test
     void importFromFileWithUnknownFormatThrowsException() throws Exception {
-        assertThrows(ImportException.class, () -> reader.importFromFile("someunknownformat", Paths.get("somepath")));
+        assertThrows(ImportException.class, () -> reader.importFromFile("someunknownformat", Path.of("somepath")));
     }
 }
