@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -37,7 +36,7 @@ public class MsBibImporterTest {
         List<String> notAccepted = Arrays.asList("CopacImporterTest1.txt", "IsiImporterTest1.isi",
                 "IsiImporterTestInspec.isi", "emptyFile.xml", "IsiImporterTestWOS.isi");
         for (String s : notAccepted) {
-            Path file = Paths.get(MsBibImporter.class.getResource(s).toURI());
+            Path file = Path.of(MsBibImporter.class.getResource(s).toURI());
             assertFalse(testImporter.isRecognizedFormat(file, Charset.defaultCharset()));
         }
     }
@@ -45,7 +44,7 @@ public class MsBibImporterTest {
     @Test
     public final void testImportEntriesEmpty() throws IOException, URISyntaxException {
         MsBibImporter testImporter = new MsBibImporter();
-        Path file = Paths.get(MsBibImporter.class.getResource("EmptyMsBib_Test.xml").toURI());
+        Path file = Path.of(MsBibImporter.class.getResource("EmptyMsBib_Test.xml").toURI());
         List<BibEntry> entries = testImporter.importDatabase(file, Charset.defaultCharset()).getDatabase().getEntries();
         assertEquals(Collections.emptyList(), entries);
     }
@@ -53,7 +52,7 @@ public class MsBibImporterTest {
     @Test
     public final void testImportEntriesNotRecognizedFormat() throws IOException, URISyntaxException {
         MsBibImporter testImporter = new MsBibImporter();
-        Path file = Paths.get(MsBibImporter.class.getResource("CopacImporterTest1.txt").toURI());
+        Path file = Path.of(MsBibImporter.class.getResource("CopacImporterTest1.txt").toURI());
         List<BibEntry> entries = testImporter.importDatabase(file, Charset.defaultCharset()).getDatabase().getEntries();
         assertEquals(0, entries.size());
     }
