@@ -2,7 +2,6 @@ package org.jabref.logic.importer.fileformat;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -42,14 +41,14 @@ class PdfContentImporterTest {
 
     @Test
     void doesNotHandleEncryptedPdfs() throws Exception {
-        Path file = Paths.get(PdfContentImporter.class.getResource("/pdfs/encrypted.pdf").toURI());
+        Path file = Path.of(PdfContentImporter.class.getResource("/pdfs/encrypted.pdf").toURI());
         List<BibEntry> result = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
     void importTwiceWorksAsExpected() throws Exception {
-        Path file = Paths.get(PdfContentImporter.class.getResource("/pdfs/minimal.pdf").toURI());
+        Path file = Path.of(PdfContentImporter.class.getResource("/pdfs/minimal.pdf").toURI());
         List<BibEntry> result = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
         BibEntry expected = new BibEntry(StandardEntryType.InProceedings);
@@ -88,5 +87,27 @@ class PdfContentImporterTest {
                                    "Corpus linguistics investigates human language by starting out from large\n";
 
         assertEquals(Optional.of(entry), importer.getEntryFromPDFContent(firstPageContents, "\n"));
+    }
+
+    @Test
+    void testParsingWithoutActualDOINumber() {
+        BibEntry entry = new BibEntry(StandardEntryType.InProceedings);
+        entry.withField(StandardField.AUTHOR, "Link to record in KAR and http://kar.kent.ac.uk/51043/  and Document Version and UNSPECIFIED  and Master of Research (MRes) thesis and University of Kent")
+             .withField(StandardField.TITLE, "Kent Academic Repository Full text document (pdf) Citation for published version Smith, Lucy Anna (2014) Mortality in the Ornamental Fish Retail Sector: an Analysis of Stock Losses and Stakeholder Opinions. DOI")
+             .withField(StandardField.YEAR, "5104");
+
+        String firstPageContents = "Kent Academic Repository Full text document (pdf)\n"
+                                   + "Citation for published version\n"
+                                   + "Smith, Lucy Anna (2014) Mortality in the Ornamental Fish Retail Sector: an Analysis of Stock\n"
+                                   + "Losses and Stakeholder Opinions.\n"
+                                   + "DOI\n\n\n"
+                                   + "Link to record in KAR\n"
+                                   + "http://kar.kent.ac.uk/51043/\n"
+                                   + "Document Version\n"
+                                   + "UNSPECIFIED\n"
+                                   + "Master of Research (MRes) thesis, University of Kent,.";
+
+        assertEquals(Optional.of(entry), importer.getEntryFromPDFContent(firstPageContents, "\n"));
+
     }
 }
