@@ -3,10 +3,10 @@ package org.jabref.logic.texparser;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
+import org.jabref.logic.preferences.TimestampPreferences;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
@@ -32,21 +32,24 @@ public class LatexParserTest {
     private final static String EINSTEIN_B = "Einstein1920b";
     private final static String EINSTEIN_C = "Einstein1920c";
 
-    private static FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
-    private static ImportFormatPreferences importFormatPreferences;
-    private static BibDatabase database;
-    private static BibDatabase database2;
+    private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
+    private ImportFormatPreferences importFormatPreferences;
+    private TimestampPreferences timestampPreferences;
+    private BibDatabase database;
+    private BibDatabase database2;
 
     @BeforeEach
     private void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
+        timestampPreferences = mock(TimestampPreferences.class);
         when(importFormatPreferences.getEncoding()).thenReturn(StandardCharsets.UTF_8);
+        when(timestampPreferences.getTimestampField()).then(invocation -> StandardField.TIMESTAMP);
 
         database = new BibDatabase();
         database2 = new BibDatabase();
 
         BibEntry darwin = new BibEntry(StandardEntryType.Book)
-                .withCiteKey(DARWIN)
+                .withCitationKey(DARWIN)
                 .withField(StandardField.TITLE, "The descent of man, and selection in relation to sex")
                 .withField(StandardField.PUBLISHER, "J. Murray")
                 .withField(StandardField.YEAR, "1888")
@@ -54,7 +57,7 @@ public class LatexParserTest {
         database.insertEntry(darwin);
 
         BibEntry einstein = new BibEntry(StandardEntryType.Book)
-                .withCiteKey(EINSTEIN)
+                .withCitationKey(EINSTEIN)
                 .withField(StandardField.TITLE, "Relativity: The special and general theory")
                 .withField(StandardField.PUBLISHER, "Penguin")
                 .withField(StandardField.YEAR, "1920")
@@ -62,7 +65,7 @@ public class LatexParserTest {
         database.insertEntry(einstein);
 
         BibEntry newton = new BibEntry(StandardEntryType.Book)
-                .withCiteKey(NEWTON)
+                .withCitationKey(NEWTON)
                 .withField(StandardField.TITLE, "The Principia: mathematical principles of natural philosophy")
                 .withField(StandardField.PUBLISHER, "Univ of California Press")
                 .withField(StandardField.YEAR, "1999")
@@ -71,19 +74,19 @@ public class LatexParserTest {
         database2.insertEntry(newton);
 
         BibEntry einsteinA = new BibEntry(StandardEntryType.InBook)
-                .withCiteKey(EINSTEIN_A)
+                .withCitationKey(EINSTEIN_A)
                 .withField(StandardField.CROSSREF, "Einstein1920")
                 .withField(StandardField.PAGES, "22--23");
         database.insertEntry(einsteinA);
 
         BibEntry einsteinB = new BibEntry(StandardEntryType.InBook)
-                .withCiteKey(EINSTEIN_B)
+                .withCitationKey(EINSTEIN_B)
                 .withField(StandardField.CROSSREF, "Einstein1921")
                 .withField(StandardField.PAGES, "22--23");
         database.insertEntry(einsteinB);
 
         BibEntry einsteinC = new BibEntry(StandardEntryType.InBook)
-                .withCiteKey(EINSTEIN_C)
+                .withCitationKey(EINSTEIN_C)
                 .withField(StandardField.CROSSREF, "Einstein1920")
                 .withField(StandardField.PAGES, "25--33");
         database.insertEntry(einsteinC);
@@ -91,7 +94,7 @@ public class LatexParserTest {
 
     @Test
     public void testSameFileDifferentDatabases() throws URISyntaxException {
-        Path texFile = Paths.get(LatexParserTest.class.getResource("paper.tex").toURI());
+        Path texFile = Path.of(LatexParserTest.class.getResource("paper.tex").toURI());
 
         LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
         LatexParserResult expectedParserResult = new LatexParserResult();
@@ -103,24 +106,24 @@ public class LatexParserTest {
         expectedParserResult.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
         expectedParserResult.addKey(DARWIN, texFile, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
 
-        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, timestampPreferences, fileMonitor).resolve(parserResult);
         LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(expectedParserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
 
-        LatexBibEntriesResolverResult crossingResult2 = new TexBibEntriesResolver(database2, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult crossingResult2 = new TexBibEntriesResolver(database2, importFormatPreferences, timestampPreferences, fileMonitor).resolve(parserResult);
         LatexBibEntriesResolverResult expectedCrossingResult2 = new LatexBibEntriesResolverResult(expectedParserResult);
 
-        expectedCrossingResult2.addEntry(database.getEntryByKey(EINSTEIN).get());
-        expectedCrossingResult2.addEntry(database.getEntryByKey(DARWIN).get());
+        expectedCrossingResult2.addEntry(database.getEntryByCitationKey(EINSTEIN).get());
+        expectedCrossingResult2.addEntry(database.getEntryByCitationKey(DARWIN).get());
 
         assertEquals(expectedCrossingResult2, crossingResult2);
     }
 
     @Test
     public void testTwoFilesDifferentDatabases() throws URISyntaxException {
-        Path texFile = Paths.get(LatexParserTest.class.getResource("paper.tex").toURI());
-        Path texFile2 = Paths.get(LatexParserTest.class.getResource("paper2.tex").toURI());
+        Path texFile = Path.of(LatexParserTest.class.getResource("paper.tex").toURI());
+        Path texFile2 = Path.of(LatexParserTest.class.getResource("paper2.tex").toURI());
 
         LatexParserResult parserResult = new DefaultLatexParser().parse(Arrays.asList(texFile, texFile2));
         LatexParserResult expectedParserResult = new LatexParserResult();
@@ -136,16 +139,16 @@ public class LatexParserTest {
         expectedParserResult.addKey(EINSTEIN, texFile2, 5, 48, 67, "This is some content trying to cite a bib file: \\cite{Einstein1920}");
         expectedParserResult.addKey(NEWTON, texFile2, 6, 48, 65, "This is some content trying to cite a bib file: \\cite{Newton1999}");
 
-        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, timestampPreferences, fileMonitor).resolve(parserResult);
         LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(expectedParserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
 
-        LatexBibEntriesResolverResult crossingResult2 = new TexBibEntriesResolver(database2, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult crossingResult2 = new TexBibEntriesResolver(database2, importFormatPreferences, timestampPreferences, fileMonitor).resolve(parserResult);
         LatexBibEntriesResolverResult expectedCrossingResult2 = new LatexBibEntriesResolverResult(expectedParserResult);
 
-        expectedCrossingResult2.addEntry(database.getEntryByKey(EINSTEIN).get());
-        expectedCrossingResult2.addEntry(database.getEntryByKey(DARWIN).get());
+        expectedCrossingResult2.addEntry(database.getEntryByCitationKey(EINSTEIN).get());
+        expectedCrossingResult2.addEntry(database.getEntryByCitationKey(DARWIN).get());
 
         assertEquals(expectedCrossingResult2, crossingResult2);
     }
